feat/fix: был обновлен интерфейс (1.0.1)
- Переработан дизайн интерфейса
- Была добавлена функция окон
- Динамическое растягивание окна приложения

--- a/PhysicalCalculator/pictures.qrc
+++ b/PhysicalCalculator/pictures.qrc
@@ -42,5 +42,8 @@
         <file>picters/icon-settings.png</file>
         <file>picters/Maximize.png</file>
         <file>picters/Minimize.png</file>
+        <file>C:/Users/Den4o/Downloads/Telegram Desktop/Combinear.qss</file>
+        <file>Combinear.qss</file>
+        <file>picters/close-button-black.png</file>
     </qresource>
 </RCC>
